--- a/leads/templates/leads/lead_details.html
+++ b/leads/templates/leads/lead_details.html
@@ -18,15 +18,8 @@
     </style>
 </head>
 <body>
-    <h1>All about leads</h1>
-    {% for lead in leads %}
-    <div class="lead">
-
-        <a href="/leads/{{lead.pk}}">{{lead.first_name}}
-            {{lead.last_name}}
-            {{lead.age}}</a>
-        
-    </div>
-    {% endfor %}
+    <a href="/leads">Go back to Leads</a>
+    <h1>This is the details of {{lead.first_name}}</h1>
+    <p>This person age: {{lead.age}}</p>
 </body>
 </html>
