--- a/leads/templates/leads/lead_update.html
+++ b/leads/templates/leads/lead_update.html
@@ -18,12 +18,13 @@
     </style>
 </head>
 <body>
-    <a href="{% url 'leads:lead-list' %}">Go back to Leads</a>
-    <h1>This is the details of {{lead.first_name}}</h1>
-    <p>This person age: {{lead.age}}</p>
-    <p>THe agent: {{lead.agent}}</p>
-    <hr>
-    <a href=" {% url 'leads:lead-update' lead.pk %} ">Update</a>
-    <a href="{% url 'leads:lead-delete' lead.pk %}">Delete</a>
+    <a href="{% url 'leads:lead-detail' lead.pk %}">Go back to {{lead.first_name}} {{lead.last_name}}</a>
+    <h1>Update Lead {{lead.first_name}} {{lead.last_name}}</h1>
+    <form method="post" action="/leads/{{lead.pk}}/update/">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="send">
+    </form>
+    
 </body>
 </html>
