--- a/leads/templates/leads/leads_list.html
+++ b/leads/templates/leads/leads_list.html
@@ -18,11 +18,12 @@
     </style>
 </head>
 <body>
+    <a href="{% url 'leads:lead-create' %}">Create a new lead</a>
     <h1>All about leads</h1>
     {% for lead in leads %}
-    <div class="lead">
 
-        <a href="/leads/{{lead.pk}}">{{lead.first_name}}
+    <div class="lead">
+        <a href=" {% url 'leads:lead-detail' lead.pk %}">{{lead.first_name}}
             {{lead.last_name}}
             {{lead.age}}</a>
         
