--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -1,23 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        .lead{
-            padding-top: 10px;
-            padding-bottom: 10px;
-            padding-left: 6px;
-            padding-right: 6px;
-            margin-top: 10px;
-            background-color: #f6f6f6;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
+{% extends "base.html" %}
+
+
+ {% block content %}
+
     <a href="{% url 'leads:lead-list' %}">Go back to Leads</a>
     <h1>Create a new Lead</h1>
     <form method="post" action="/leads/create/">
@@ -25,6 +10,4 @@
         {{form.as_p}}
         <input type="submit" value="send">
     </form>
-    
-</body>
-</html>
+{% endblock content %}
