--- a/leads/templates/leads/lead_update.html
+++ b/leads/templates/leads/lead_update.html
@@ -1,23 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        .lead{
-            padding-top: 10px;
-            padding-bottom: 10px;
-            padding-left: 6px;
-            padding-right: 6px;
-            margin-top: 10px;
-            background-color: #f6f6f6;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
+{% extends "base.html" %}
+
+
+ {% block content %}
+    
     <a href="{% url 'leads:lead-detail' lead.pk %}">Go back to {{lead.first_name}} {{lead.last_name}}</a>
     <h1>Update Lead {{lead.first_name}} {{lead.last_name}}</h1>
     <form method="post" action="/leads/{{lead.pk}}/update/">
@@ -26,5 +11,4 @@
         <input type="submit" value="send">
     </form>
     
-</body>
-</html>
+{% endblock content %}
