--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -4,3 +4,5 @@
 
     <h1>Password reset complete</h1>
     <p>You have successfully reset your password, Click <a href="{% url 'login'%}">to login</a></p>
+
+{% endblock content %}
