--- a/agents/templates/agents/agent_delete.html
+++ b/agents/templates/agents/agent_delete.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
-
+{% load tailwind_filters %}
 
  {% block content %}
-
-    <a href="{% url 'agents:agent-list' %}">Go back to Agents</a>
-    <h1>Are you sure you want to delete the Agent</h1>
-    <form method="post">
+ <div class="max-w-lg mx-auto">
+    <a class="hover:text-blue-500" href="{% url 'agents:agent-list' %}">Go back to Agents</a>
+    <hr/>
+    <h1 class="text-3xl text-gray-800">Are you sure you want to delete the Agent?</h1>
+    <form method="post" class="mt-5">
         {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="send">
+        {{form|crispy}}
+        <input type="submit" class="w-full text-white bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md" value="send">
     </form>
+ </div>
 {% endblock content %}
