--- a/agents/templates/agents/create_agent.html
+++ b/agents/templates/agents/create_agent.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
-
+{% load tailwind_filters %}
 
  {% block content %}
-
-    <a href="{% url 'agents:agent-list' %}">Go back to Agents</a>
-    <h1>Create a new Agent</h1>
+ <div class="max-w-lg mx-auto">
+    <a class="hover:text-blue-500" href="{% url 'agents:agent-list' %}">Go back to Agents</a>
+    <hr>
+    <h1 class="text-4xl text-gray-800">Create a new Agent</h1>
     <form method="post" action="/agents/create/">
         {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="send">
+        {{form|crispy}}
+        <input type="submit" class="w-full text-white bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md" value="send">
     </form>
+    </div>
 {% endblock content %}
