--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -1,13 +1,23 @@
 {% extends "base.html" %}
 
-
+{% load tailwind_filters %}
  {% block content %}
 
-    <a href="{% url 'leads:lead-list' %}">Go back to Leads</a>
-    <h1>Create a new Lead</h1>
-    <form method="post" action="/leads/create/">
+    
+<div class="max-w-lg mx-auto">
+    <a class="hover:text-blue-500" href="{% url 'leads:lead-list' %}">Go back to Leads</a>
+    <hr>
+    <h1 class="text-4xl text-gray-800" >Create a new Lead</h1>
+    <form method="post" class="mt-5">
         {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="send">
+        {{ form|crispy }}
+        <button type="submit" class="w-full text-white bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">Submit</button>
+
     </form>
+</div>
+
 {% endblock content %}
+
+
+
+
