--- a/leads/templates/leads/lead_details.html
+++ b/leads/templates/leads/lead_details.html
@@ -19,18 +19,18 @@
           <a href="{% url 'leads:lead-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">
           Update Details</a>
         </div>
-        <p class="leading-relaxed mb-4">Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. XOXO fam inxigo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean.</p>
+        <p class="leading-relaxed mb-4">{{ lead.description }}</p>
         <div class="flex border-t border-gray-200 py-2">
           <span class="text-gray-500">Age</span>
           <span class="ml-auto text-gray-900">{{lead.age}}</span>
         </div>
         <div class="flex border-t border-gray-200 py-2">
-          <span class="text-gray-500">Location</span>
-          <span class="ml-auto text-gray-900">DUmmy Location</span>
+          <span class="text-gray-500">Email</span>
+          <span class="ml-auto text-gray-900">{{lead.email}}</span>
         </div>
         <div class="flex border-t border-b mb-6 border-gray-200 py-2">
-          <span class="text-gray-500">Cell phone</span>
-          <span class="ml-auto text-gray-900">331212312</span>
+          <span class="text-gray-500">Phone Number</span>
+          <span class="ml-auto text-gray-900">{{ lead.phone_number }}</span>
         </div>
         <div class="flex">
           <button class="flex ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Button</button>
