--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -2,5 +2,5 @@ You've requested to reset your Password
 
 Please go to the folowing URL to enter your new Password:
 
-{{ protocol }}://{{ domain }}/password_reset_confirm/{{ uid }}/{{ token }}
+{{ protocol }}://{{ domain }}/password-reset-confirm/{{ uid }}/{{ token }}/
 
