--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,10 +1,15 @@
 {% include "base.html" %}
-
+{% load tailwind_filters %}
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p}}
-    <button type="submit">Signup</button>
-</form>
+<div class="max-w-lg mx-auto">
+    <form method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button type="submit">Signup</button>
+    </form>
+<div class="py-5 border-t border-gray-200 mt-5">
+    <a class="hover:text-blue-500 mt-3" href="{% url 'login' %}">Already have an account?</a>
+</div>
+</div>
 {% endblock content %}
